# object

./: README.md  dune-project  object.opam  object.opam.template
.github/workflows/: build.yml
doc/: dune  index.mld
example/: dune  generic_objdump.ml  nm.ml  objdump.ml  oc_objdump.ml  ocdof.ml  ocfile.ml  oclipo.ml  ocnm.ml  octool.ml  readelf.ml
src/: buffer.ml  buffer.mli  dune  elf.ml  elf.mli  macho.ml  macho.mli  object.ml  object_format.ml  object_format.mli  object_types.ml  pe.ml  pe.mli  types.ml
test/: dune  test_elf_amd64.ml  test_elf_arm64.ml  test_fat.ml  test_leb128.ml  test_macho_amd64.ml  test_macho_arm64.ml  test_object.ml
