(test
 (name test_object)
 (libraries object integers alcotest)
 (action
  (run %{exe:test_object.exe})))

(test
 (name test_leb128)
 (libraries object integers alcotest)
 (action
  (run %{exe:test_leb128.exe})))

(test
 (name test_macho_arm64)
 (deps hello_world)
 (build_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (libraries object integers alcotest cmdliner)
 (action
  (run %{exe:test_macho_arm64.exe} --binary %{dep:hello_world})))

(test
 (name test_macho_amd64)
 (deps hello_world)
 (build_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "amd64")))
 (libraries object integers alcotest cmdliner)
 (action
  (run %{exe:test_macho_amd64.exe} --binary %{dep:hello_world})))

(test
 (name test_elf_arm64)
 (libraries object integers alcotest cmdliner)
 (build_if
  (and
   (= %{system} "linux")
   (= %{architecture} "arm64")))
 (action
  (run %{exe:test_elf_arm64.exe} --binary %{dep:hello_world})))

; Provide a plain C program to inspect

(rule
 (aliases build-c runtest)
 (deps hello_world.c)
 (target hello_world)
 (enabled_if
  (or
   (= %{system} "linux")
   (= %{system} "macosx")))
 (action
  (run cc %{deps} -o %{target})))

; Provide a C program with DWARF 5 debug information to inspect.

(rule
 (aliases build-c runtest)
 (deps hello_world.c)
 (target hello_world_dwarf_5)
 (enabled_if
  (or
   (= %{system} "linux")
   (= %{system} "macosx")))
 (action
  (run cc -gdwarf-5 %{deps} -o %{target})))
