(test
 (name test_object)
 (libraries object integers alcotest)
 (action
  (run %{exe:test_object.exe})))

(test
 (name test_leb128)
 (libraries object integers alcotest)
 (action
  (run %{exe:test_leb128.exe})))

(test
 (name test_fat)
 (build_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (libraries object integers alcotest)
 (action
  (run %{exe:test_fat.exe})))

(test
 (name test_macho_arm64)
 (deps hello_world)
 (build_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (libraries object integers alcotest cmdliner)
 (action
  (run %{exe:test_macho_arm64.exe} --binary %{dep:hello_world})))

(test
 (name test_macho_amd64)
 (deps hello_world)
 (build_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "amd64")))
 (libraries object integers alcotest cmdliner)
 (action
  (run %{exe:test_macho_amd64.exe} --binary %{dep:hello_world})))

(test
 (name test_elf_arm64)
 (libraries object integers alcotest cmdliner)
 (build_if
  (and
   (= %{system} "linux")
   (= %{architecture} "arm64")))
 (action
  (run %{exe:test_elf_arm64.exe} --binary %{dep:hello_world})))

; Provide a plain C program to inspect

(rule
 (deps hello_world.c)
 (target hello_world)
 (enabled_if
  (or
   (= %{system} "linux")
   (= %{system} "macosx")))
 (action
  (run cc %{deps} -o %{target})))

; Provide a C program with DWARF 5 debug information to inspect.

(rule
 (deps hello_world.c)
 (target hello_world_dwarf_5)
 (enabled_if
  (or
   (= %{system} "linux")
   (= %{system} "macosx")))
 (action
  (run cc -gdwarf-5 %{deps} -o %{target})))

; FAT binary testing - compare our tools with system tools

(rule
 (target xcrun.otool-f.expected)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run otool -f /usr/bin/xcrun))))

(rule
 (target xcrun.otool-f.output)
 (deps %{bin:octool})
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:octool} -f /usr/bin/xcrun))))

(rule
 (alias runtest)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff xcrun.otool-f.expected xcrun.otool-f.output)))

(rule
 (target xcrun.lipo-info.expected)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run lipo -info /usr/bin/xcrun))))

(rule
 (target xcrun.lipo-info.output)
 (deps %{bin:oclipo})
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:oclipo} --info /usr/bin/xcrun))))

(rule
 (alias runtest)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff xcrun.lipo-info.expected xcrun.lipo-info.output)))

(rule
 (target xcrun.lipo-archs.expected)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run lipo -archs /usr/bin/xcrun))))

(rule
 (target xcrun.lipo-archs.output)
 (deps %{bin:oclipo})
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:oclipo} --archs /usr/bin/xcrun))))

(rule
 (alias runtest)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff xcrun.lipo-archs.expected xcrun.lipo-archs.output)))

(rule
 (target xcrun.lipo-verify_arch.expected)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run lipo /usr/bin/xcrun -verify_arch x86_64 arm64e))))

(rule
 (target xcrun.lipo-verify_arch.output)
 (deps %{bin:oclipo})
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run
    %{bin:oclipo}
    --verify_arch
    x86_64
    --verify_arch
    arm64e
    /usr/bin/xcrun))))

(rule
 (alias runtest)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff xcrun.lipo-verify_arch.expected xcrun.lipo-verify_arch.output)))

(rule
 (target xcrun.file.expected)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run file /usr/bin/xcrun))))

(rule
 (target xcrun.file.output)
 (deps %{bin:file})
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:file} /usr/bin/xcrun))))

(rule
 (alias runtest)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff xcrun.file.expected xcrun.file.output)))

(rule
 (target xcrun.otool-l.expected)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run otool -l /usr/bin/xcrun))))

(rule
 (target xcrun.otool-l.output)
 (deps %{bin:octool})
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (with-stdout-to
   %{target}
   (run %{bin:octool} -l /usr/bin/xcrun))))

(rule
 (alias runtest)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (diff xcrun.otool-l.expected xcrun.otool-l.output)))
